src/test/deca/context/invalid/cast_inva_cont_01.deca
// Description:
//    Cast invalide
//
// Resultats:
//      Error ligne 12, type invalide pour cast
//
// Historique:
//    cree le 01/01/2023

{
   int x = 1;
   boolean y = (boolean) (x);
}
